fix z-index preload, active page

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ ol {
 	height: 100%;
 	top: 0;
 	left: 0;
-	z-index: 999999;
+	z-index: 9999999999999;
 	background: #000;
 }
 
